--- a/config/locales/active_record.en.yml
+++ b/config/locales/active_record.en.yml
@@ -2,6 +2,8 @@
 en:
   activerecord:
     attributes:
+      budget:
+        limit_type_remainder: Remainder
       import:
         sources:
           ptsb: PTSB
