--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -2,6 +2,10 @@
   "pt-BR": {
     "activerecord": {
       "attributes": {
+        "budget": {
+          "limit_type": "Tipo do Orçamento",
+          "limit_type_remainder": "Restante"
+        },
         "category": {
           "color": "Cor",
           "name": "Nome"
@@ -180,12 +184,31 @@
         }
       },
       "models": {
+        "budget": "Orçamento",
         "category": "Categoria",
         "profile": "Perfil",
         "subcategory": "Subcategoria",
         "transaction": "Transação",
         "user": "Usuário",
         "wallet": "Carteira"
+      }
+    },
+    "budgets": {
+      "create": {
+        "error": "Orçamento não pode ser criado: %{error}",
+        "success": "Orçamento criado com sucesso."
+      },
+      "destroy": {
+        "error": "Orçamento não pode ser desativado.",
+        "success": "Orçamento desativado com sucesso."
+      },
+      "reenable": {
+        "error": "Orçamento não pode ser reabilitado.",
+        "success": "Orçamento reabilitado com sucesso."
+      },
+      "update": {
+        "error": "Orçamento não pode ser atualizado: %{error}",
+        "success": "Orçamento atualizado com successo."
       }
     },
     "categories": {
@@ -820,6 +843,28 @@
     "views": {
       "app_description": "Finance MicroManager is a personal finance management tool designed to allow users to meticulously track their day-to-day expenses. With a user-friendly interface, this web-based application ensures you have complete control and visibility into your financial life.",
       "app_name": "Finance MicroManager",
+      "budgets": {
+        "confirmation": {
+          "disable": "Tem certeza de que deseja desabilitar este orçamento? Isto irá manter orçamentos passados, incluindo o deste mês.",
+          "reenable": "Tem certeza de que deseja reabilitar este orçamento? Isto terá efeito para o mês corrente e meses futuros."
+        },
+        "floating_button_label": "Novo Orçamento",
+        "form": {
+          "cancel": "Cancelar",
+          "edit_title": "Editar Orçamento",
+          "limit_label": "Limite Mensal",
+          "limit_type_absolute_label": "Absoluto",
+          "limit_type_label": "Tipo do Orçamento",
+          "limit_type_percentage_label": "Porcentagem",
+          "limit_type_remainder_label": "Restante",
+          "new_title": "Novo Orçamento",
+          "submit": "Salvar"
+        },
+        "index": {
+          "new": "Novo Orçamento",
+          "title": "Orçamentos"
+        }
+      },
       "categories": {
         "confirmation": {
           "disable": "Tem certeza de que deseja desabilitar esta categoria?",
@@ -865,6 +910,11 @@
         }
       },
       "components": {
+        "budgets_list": {
+          "budget_usage_label": "Orçamento",
+          "category_name_label": "Categoria",
+          "new_budget_label": "Criar Orçamento"
+        },
         "categories_list": {
           "disabled": "Desabilitada",
           "name_label": "Nome",
