--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -911,6 +911,7 @@
           "new_subcategory": "Criar Subcategoria",
           "reenable": "Reabilitar",
           "remaining_budget_label": "Restante",
+          "set_budget_menu_item": "Definir Orçamento",
           "show_all_subcategories": "Mostrar Desabilitadas",
           "sub_header_budget_history": "Histórico de Orçamentos",
           "sub_header_recent_transactions": "Transações Recentes",
