--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -70,6 +70,7 @@ pt-BR:
         edit: Editar
         disable: Desabilitar
         reenable: Reabilitar
+        set_budget_menu_item: Definir Orçamento
         new_subcategory: Criar Subcategoria
         subcategories_options: Opções
         show_all_subcategories: Mostrar Desabilitadas
