--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -938,6 +938,11 @@
           "subcategories_label": "Subcategorias",
           "system": "Sistema"
         },
+        "category_summary_list": {
+          "from_budget_label": "de",
+          "left_budget_label": "restantes",
+          "over_budget_label": "acima"
+        },
         "import_names_list": {
           "from_name_label": "De",
           "to_name_label": "Para"
