--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -93,6 +93,10 @@ en:
         system: System
         name_label: Name
         subcategories_label: Subcategories
+      category_summary_list:
+        from_budget_label: from
+        left_budget_label: left
+        over_budget_label: over
       import_names_list:
         from_name_label: From
         to_name_label: To
