--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -19,7 +19,6 @@ en:
         no_budget_set: --- No budget ---
         monthly_budget_absolute_desc: '%{amount} / month'
         monthly_budget_percentage_desc: '%{percentage} of monthly income'
-
       form:
         new_title: New Budget
         edit_title: Edit Budget
@@ -31,6 +30,18 @@ en:
         carryover_label: Apply carryover to next month
         submit: Submit
         cancel: Cancel
+      show:
+        title: Budget
+        sub_header_summary: Summary for
+        sub_header_budget_history: Budget History
+        of_label: of
+        edit: Edit
+        disable: Disable
+        reenable: Re-enable
+        limit_amount_label: Budget limit
+        used_amount_label: Used
+        remaining_amount_label: Available
+        carryover_label: Carryover from
 
     categories:
       floating_button_label: New Category
@@ -307,6 +318,7 @@ en:
         toast_title_warning: Warning
         toast_title_danger: Error
       vertical_menu:
+        budgets: Budgets
         dashboard: Dashboard
         imports: Transaction Imports
         imports_list: List Imports
