--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -863,8 +863,8 @@
       "app_name": "Finance MicroManager",
       "budgets": {
         "confirmation": {
-          "disable": "Tem certeza de que deseja desabilitar este orçamento? Isto irá manter orçamentos passados, incluindo o deste mês.",
-          "reenable": "Tem certeza de que deseja reabilitar este orçamento? Isto terá efeito para o mês corrente e meses futuros."
+          "disable": "Tem certeza de que deseja desabilitar este orçamento? Isto irá manter orçamentos passados, porém irá excluir o orçamento deste mês.",
+          "reenable": "Tem certeza de que deseja reabilitar este orçamento? Isto irá criar um orçamento para este mês e meses futuros."
         },
         "floating_button_label": "Novo Orçamento",
         "form": {
@@ -894,6 +894,7 @@
           "disable": "Desabilitar",
           "edit": "Editar",
           "limit_amount_label": "Limite mensal",
+          "no_budget_info_message": "Sem orçamento neste mês",
           "of_label": "de",
           "reenable": "Reabilitar",
           "remaining_amount_label": "Disponível",
