--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -8,8 +8,8 @@ en:
     budgets:
       floating_button_label: New Budget
       confirmation:
-        disable: Are you sure you want to disable this budget? This will keep past budgets, including the current month's budget.
-        reenable: Are you sure you want to re-enable this budget? This will take effect for the current month and future months.
+        disable: Are you sure you want to disable this budget? This will keep past budgets, but will remove this month's budget.
+        reenable: Are you sure you want to re-enable this budget? This will set the budget for this and future months.
       index:
         title: Budgets config
         new: Set Budget
@@ -42,6 +42,7 @@ en:
         used_amount_label: Used
         remaining_amount_label: Available
         carryover_label: Carryover from
+        no_budget_info_message: No budget for this month
 
     categories:
       floating_button_label: New Category
